atualização do projeto

--- a/template.css
+++ b/template.css
@@ -266,15 +266,16 @@ nav a:hover {
     margin-bottom: 5px;
 }
 
-.news_data {
+.widget_body1 {
+    display: inline-block;
+}
 
-   
-    
-   
-  
-    
+.widget_body2 {
+    display: inline-block;
+    margin-left: 30px;
+}
 
-    
+.news_data {    
     display: inline-block;
     color: white;
     background-color:  #3156A3;
@@ -294,11 +295,27 @@ nav a:hover {
    height: 30px;
    font-size: 14px;
    padding-top: 10px;
-
 }
 
+.news_img1 img{ 
+width: 300px;
+height: 190px;
+margin-top: 25px;
+margin-bottom: 25px;
+}
 
+.news_text1 {
+    font-weight: 800;
+    width: 300px;
+    font-size: 20px;
+    margin-bottom: 25px;
+    
+}
 
-
-
+.news_text2 {
+    width: 300px;
+    line-height: 25px;
+    margin-bottom: 30px;
+    color:  #727272;
+}
 
